# Verteilen2Core

./: .gitignore  CMakeLists.txt  README.md  build.sh  test.sh
include/data/: config.h  data.h  dataset.h  job.h  project.h  task.h  version.h
include/utility/: environment.h  uuid.h
src/: TEST.cpp
src/data/: dataset.cpp  job.cpp  project.cpp  task.cpp
test/: environment.cpp  uuid.cpp
test/serialization/: job.cpp  project.cpp  task.cpp
